stage_3_SingleContainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx_single_container
  annotations:
    #nginx.org/rewrites: "serviceName!=nginx rewrite=/$3"
    #nginx.ingress.kubernetes.io/app-root: 
    #nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
